tests/ui/span/vec_refs_data_with_early_death.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/vec_refs_data_with_early_death.rs:17:12
   |
LL |     let x: i8 = 3;
   |         - binding `x` declared here
...
LL |     v.push(&x);
   |            ^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `x` dropped here while still borrowed
   | borrow might be used here, when `v` is dropped and runs the `Drop` code for type `Bag`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error[E0597]: `y` does not live long enough
  --> $DIR/vec_refs_data_with_early_death.rs:19:12
   |
LL |     let y: i8 = 4;
   |         - binding `y` declared here
...
LL |     v.push(&y);
   |            ^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `y` dropped here while still borrowed
   | borrow might be used here, when `v` is dropped and runs the `Drop` code for type `Bag`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
